--- a/project2.html
+++ b/project2.html
@@ -153,7 +153,7 @@ height: auto;
 
 <!--glowing effect on images-->
 <div class="glow-on-hover">
-  <img src="images/overall.png" alt="Overall Dashboard">
+  <img src="images/Overall.png" alt="Overall Dashboard">
 </div>
 <p></p>
 
@@ -171,7 +171,7 @@ height: auto;
 
 <!--glowing effect on images-->
 <div class="glow-on-hover">
-  <img src="images/revenue.png" alt="Overall Dashboard">
+  <img src="images/Revenue.png" alt="Overall Dashboard">
 </div>
 <p></p>
 
@@ -190,7 +190,7 @@ height: auto;
 
 <!--glowing effect on images-->
 <div class="glow-on-hover">
-  <img src="images/types.png" alt="Overall Dashboard">
+  <img src="images/Types.png" alt="Overall Dashboard">
 </div>
 <p></p>
 
@@ -208,14 +208,14 @@ height: auto;
 
 <!--glowing effect on images-->
 <div class="glow-on-hover">
-  <img src="images/cancelled.png" alt="Overall Dashboard">
+  <img src="images/Cancelled.png" alt="Overall Dashboard">
 </div>
 
 <h1 class="major heading" style="border-bottom: 2px solid gold;"></h1>
 
 
 <div class="glow-on-hover">
-  <img src="images/ratings.png" alt="Overall Dashboard">
+  <img src="images/Ratings.png" alt="Overall Dashboard">
 </div>
 <p></p>
 
