--- a/project1.html
+++ b/project1.html
@@ -136,7 +136,7 @@ height: auto;
 </style>
 <!--glowing effect on images-->
 <div class="glow-on-hover-blue">
-<img src="images/overall1.png" alt="Overall Dashboard">
+<img src="images/Overall1.png" alt="Overall Dashboard">
 </div>
 <p></p>
 <!-- key insights -->
