--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						<div class="logo crown-icon" onclick="animateCrown(this)">
 							<span class="fas fa-crown"></span>
 						</div>						
-						<h2 style="border-bottom: 1px solid gold;">Ola!, I'm Vandan Jagarwal</h2>
+						<h2 style="border-bottom: 1px solid gold;">Hi, I'm Vandan Jagarwal</h2>
 						<h3 >SQL, Python, Power BI, and Excel are my keys to unlock the power of your data.</h3>
 						<h3 >I'm a Data Analyst who can turn your "uh-oh" into "aha!" moments.</h3>
 						<h3 class="major"  style="border-bottom: 1px solid gold;"></h3>
